--- a/Web/miniProjects/index.html
+++ b/Web/miniProjects/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Template</title>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Template" />
-    <meta name="author" content="Justin Muirhead" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/css/styles.css" />
-  </head>
-  <body>
-    <div id="wrapper">
-      <header>
-        <h1>Main Header</h1>
-      </header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Nav Menu Option 1</a></li>
-          <li><a href="page2.html">Nav Menu Option 2</a></li>
-          <li><a href="page3.html">Nav Menu Option 3</a></li>
-        </ul>
-      </nav>
-      <section id="maincontent">
-        <article>
-          <section>
-            <header>
-              <h2>Definition of an HTML5 Article</h2>
-              <!--h2 is better than h1 -->
-            </header>
-            <p>
-              The &lt;article&gt; tag specifies independent, self-contained
-              content. An article should make sense on its own and it should be
-              possible to distribute it independently from the rest of the site.
-            </p>
-          </section>
-          <section>
-            <header>
-              <h2>Definition of an HTML5 Section</h2>
-            </header>
-
-            <p>
-              The &lt;section&gt; tag defines sections in a document. Such as
-              chapters, headers, footers, or any other sections of the document.
-            </p>
-          </section>
-        </article>
-      </section>
-      <aside>
-        <header>
-          <h2>Aside Tag</h2>
-        </header>
-        <h3>Links</h3>
-        <ul>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-          <li><a href="#">Link 3</a></li>
-        </ul>
-      </aside>
-      <footer>
-        <p>Footer</p>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Bootstrap 4 Example</title><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"></head><body><nav class="navbar navbar-expand-sm bg-dark navbar-dark"><a class="navbar-brand" href="#"><img id="navbar_logo" src="images/sales_tech_451x120.jpg" alt="logo" style="height:40px;"></a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"><span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent"><ul class="navbar-nav"><li class="nav-item"><a class="nav-link" href="#">Link 1</a></li><li class="nav-item"><a class="nav-link" href="#">Link 2</a></li><li class="nav-item"><a class="nav-link" href="#">Link 3</a></li></ul></div></nav><div class="container"><h3>Brand / Logo</h3><p>When using the .navbar-brand class on images, Bootstrap 4 will automatically style the image to fit the navbar.</p></div><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script></body></html>
