--- a/Web/jsTutorial/index.html
+++ b/Web/jsTutorial/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html ><head> <title>Dynamic Pages | Javascript </title><link rel="stylesheet" href="css/styles.css" type="text/css"/><script type="text/javascript" src="js/main.js"></script></head><body> <div id="main">Hello </div><button onClick="d6()">Click Me </button></body>
+<!DOCTYPE html ><head> <title>Dynamic Pages | Javascript </title><link rel="stylesheet" href="css/styles.css" type="text/css"/><script type="text/javascript" src="js/main.js"></script></head><body> <div id="main">Hello </div><button onClick="d6(this)">Click Me </button></body>
